Fixed button on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -130,24 +130,25 @@
     }
   }
 
-  .info-section {
-    display: grid;
-    grid-row: 13 / 15;
-    margin-top: 4em;
-    padding: 20px;
+  #button-wrapper {
 
     button {
-      margin-bottom: 2em;
-      margin-left: auto;
-      margin-right: auto;
-      width: 60%;
+      font-size: 14px;
+      line-height: 19px;
+      font-weight: 700;
+      text-align: center;
+      padding: 22px 50px;
+      border: 0;
+      margin: 50px 0;
+      text-transform: uppercase;
       background-color: #2ecc71;
       color: white;
-      border-radius: 2px;
-      border: none;
-      text-transform: uppercase;
-      padding: 10px;
-      font-weight: bolder;
+      border-radius: 10px;
+
+      &:hover {
+        background-color: #1abc9c;
+      }
+
     }
   }
 
@@ -259,25 +260,6 @@
     grid-row: 9 / 10;
     grid-column: 6 / 8;
 
-
-    button {
-      font-size: 14px;
-      line-height: 19px;
-      font-weight: 700;
-      text-align: center;
-      padding: 22px 50px;
-      border: 0;
-      margin: 50px 0;
-      text-transform: uppercase;
-      background-color: #2ecc71;
-      color: white;
-      border-radius: 10px;
-
-      &:hover {
-        background-color: #1abc9c;
-      }
-
-    }
   }
 
   .feature-boxes {
